// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`composition hook should return with ActionButtons props 1`] = `
Object {
  "children": <React.Fragment>
    <Button>
      Cancel
    </Button>
    <Button
      isLoading={false}
      palette="primary"
      type="submit"
    >
      Submit
    </Button>
  </React.Fragment>,
  "className": "css-1fie8gx css-ey6lii css-63it0p css-1qnz8fc bb-Box bb-Set bb-ActionButtons",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`defaultProps should render correctly 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 test bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`defaultProps should render correctly with addon buttons 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-10[disabled],
.emotion-10[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-10:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-10:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-10:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Addon
  </button>
  <button
    class="emotion-10 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`defaultProps should render correctly with cancel props 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4 {
  cursor: not-allowed;
  position: relative;
}

.emotion-4:focus {
  box-shadow: unset!important;
  outline: unset!important;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10+.bb-Text {
  opacity: 0;
}

.emotion-14 {
  line-height: 1;
  font-size: 20px;
}

.emotion-15 {
  color: var(--bb-palette-gray100, #000000)!important;
}

.emotion-16.emotion-16 {
  font-size: 1.25em;
}

.emotion-17 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-18 {
  stroke: var(--bb-palette-default300, #000000);
}

.emotion-19 {
  stroke-dasharray: 250;
  stroke-dashoffset: 200px;
  stroke: var(--bb-palette-gray100, #000000);
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

abbr.emotion-20 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-20 {
  font-family: monospace;
}

i.emotion-20 {
  font-style: italic;
}

kbd.emotion-20 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-20 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-20 {
  font-weight: bold;
}

sub.emotion-20,
sup.emotion-20 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-20,
u.emotion-20 {
  text-decoration-skip: ink edges;
}

i.emotion-20,
cite.emotion-20,
var.emotion-20,
em.emotion-20 {
  font-style: italic;
}

kbd.emotion-20,
pre.emotion-20,
samp.emotion-20 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-20 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-23[disabled],
.emotion-23[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-23:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-23:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-23:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    aria-disabled="true"
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    disabled=""
    style="pointer-events: none;"
    type="button"
  >
    <div
      class="emotion-7 emotion-2 emotion-3 emotion-10 bb-ButtonSpinnerWrapper bb-Box bb-Flex"
    >
      <div
        class="emotion-7 emotion-2 emotion-3 emotion-14 emotion-15 emotion-16 bb-ButtonSpinner bb-Box bb-Flex bb-Spinner"
      >
        <svg
          class="emotion-17 bb-Spinnervector"
          viewBox="22 22 44 44"
        >
          <circle
            class="emotion-18 bb-SpinnertrackCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
          <circle
            class="emotion-19 bb-SpinnerloaderCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
    <span
      class="emotion-20 emotion-2 emotion-3 bb-Box bb-Text"
    >
      Cancel
    </span>
  </button>
  <button
    class="emotion-23 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`defaultProps should render correctly with cancel text 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Close
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`overrides ActionButtons.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  position: absolute!important;
  top: 0!important;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-6 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`props should render correctly with addon buttons 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-10[disabled],
.emotion-10[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-10:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-10:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-10:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Addon
  </button>
  <button
    class="emotion-10 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`props should render correctly with cancel props 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4 {
  cursor: not-allowed;
  position: relative;
}

.emotion-4:focus {
  box-shadow: unset!important;
  outline: unset!important;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10+.bb-Text {
  opacity: 0;
}

.emotion-14 {
  line-height: 1;
  font-size: 20px;
}

.emotion-15 {
  color: var(--bb-palette-gray100, #000000)!important;
}

.emotion-16.emotion-16 {
  font-size: 1.25em;
}

.emotion-17 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-18 {
  stroke: var(--bb-palette-default300, #000000);
}

.emotion-19 {
  stroke-dasharray: 250;
  stroke-dashoffset: 200px;
  stroke: var(--bb-palette-gray100, #000000);
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

abbr.emotion-20 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-20 {
  font-family: monospace;
}

i.emotion-20 {
  font-style: italic;
}

kbd.emotion-20 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-20 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-20 {
  font-weight: bold;
}

sub.emotion-20,
sup.emotion-20 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-20,
u.emotion-20 {
  text-decoration-skip: ink edges;
}

i.emotion-20,
cite.emotion-20,
var.emotion-20,
em.emotion-20 {
  font-style: italic;
}

kbd.emotion-20,
pre.emotion-20,
samp.emotion-20 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-20 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-23[disabled],
.emotion-23[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-23:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-23:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-23:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    aria-disabled="true"
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    disabled=""
    style="pointer-events: none;"
    type="button"
  >
    <div
      class="emotion-7 emotion-2 emotion-3 emotion-10 bb-ButtonSpinnerWrapper bb-Box bb-Flex"
    >
      <div
        class="emotion-7 emotion-2 emotion-3 emotion-14 emotion-15 emotion-16 bb-ButtonSpinner bb-Box bb-Flex bb-Spinner"
      >
        <svg
          class="emotion-17 bb-Spinnervector"
          viewBox="22 22 44 44"
        >
          <circle
            class="emotion-18 bb-SpinnertrackCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
          <circle
            class="emotion-19 bb-SpinnerloaderCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
    <span
      class="emotion-20 emotion-2 emotion-3 bb-Box bb-Text"
    >
      Cancel
    </span>
  </button>
  <button
    class="emotion-23 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`props should render correctly with cancel text 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Close
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`props should render correctly with isLoading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7 {
  cursor: not-allowed;
  position: relative;
}

.emotion-7:focus {
  box-shadow: unset!important;
  outline: unset!important;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-13+.bb-Text {
  opacity: 0;
}

.emotion-17 {
  line-height: 1;
  font-size: 20px;
}

.emotion-18 {
  color: var(--bb-palette-primaryInverted, #000000)!important;
}

.emotion-19.emotion-19 {
  font-size: 1.25em;
}

.emotion-20 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-21 {
  stroke: var(--bb-palette-primary300, #000000);
}

.emotion-22 {
  stroke-dasharray: 250;
  stroke-dashoffset: 200px;
  stroke: var(--bb-palette-primaryInverted, #000000);
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

abbr.emotion-23 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-23 {
  font-family: monospace;
}

i.emotion-23 {
  font-style: italic;
}

kbd.emotion-23 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-23 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-23 {
  font-weight: bold;
}

sub.emotion-23,
sup.emotion-23 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-23,
u.emotion-23 {
  text-decoration-skip: ink edges;
}

i.emotion-23,
cite.emotion-23,
var.emotion-23,
em.emotion-23 {
  font-style: italic;
}

kbd.emotion-23,
pre.emotion-23,
samp.emotion-23 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-23 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    <div
      class="emotion-10 emotion-2 emotion-3 emotion-13 bb-ButtonSpinnerWrapper bb-Box bb-Flex"
    >
      <div
        class="emotion-10 emotion-2 emotion-3 emotion-17 emotion-18 emotion-19 bb-ButtonSpinner bb-Box bb-Flex bb-Spinner"
      >
        <svg
          class="emotion-20 bb-Spinnervector"
          viewBox="22 22 44 44"
        >
          <circle
            class="emotion-21 bb-SpinnertrackCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
          <circle
            class="emotion-22 bb-SpinnerloaderCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
    <span
      class="emotion-23 emotion-2 emotion-3 bb-Box bb-Text"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`props should render correctly with onClickCancel 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`props should render correctly with onClickSubmit 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`props should render correctly with palette 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-secondary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-secondaryInverted, #000000);
  fill: var(--bb-palette-secondaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-secondary, #000000) 0px 0px 0px 1px,var(--bb-palette-secondary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-secondary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-secondary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`props should render correctly with submitProps 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7 {
  cursor: not-allowed;
  position: relative;
}

.emotion-7:focus {
  box-shadow: unset!important;
  outline: unset!important;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-13+.bb-Text {
  opacity: 0;
}

.emotion-17 {
  line-height: 1;
  font-size: 20px;
}

.emotion-18 {
  color: var(--bb-palette-primaryInverted, #000000)!important;
}

.emotion-19.emotion-19 {
  font-size: 1.25em;
}

.emotion-20 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-21 {
  stroke: var(--bb-palette-primary300, #000000);
}

.emotion-22 {
  stroke-dasharray: 250;
  stroke-dashoffset: 200px;
  stroke: var(--bb-palette-primaryInverted, #000000);
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

abbr.emotion-23 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-23 {
  font-family: monospace;
}

i.emotion-23 {
  font-style: italic;
}

kbd.emotion-23 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-23 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-23 {
  font-weight: bold;
}

sub.emotion-23,
sup.emotion-23 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-23,
u.emotion-23 {
  text-decoration-skip: ink edges;
}

i.emotion-23,
cite.emotion-23,
var.emotion-23,
em.emotion-23 {
  font-style: italic;
}

kbd.emotion-23,
pre.emotion-23,
samp.emotion-23 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-23 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    aria-disabled="true"
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    disabled=""
    style="pointer-events: none;"
    type="submit"
  >
    <div
      class="emotion-10 emotion-2 emotion-3 emotion-13 bb-ButtonSpinnerWrapper bb-Box bb-Flex"
    >
      <div
        class="emotion-10 emotion-2 emotion-3 emotion-17 emotion-18 emotion-19 bb-ButtonSpinner bb-Box bb-Flex bb-Spinner"
      >
        <svg
          class="emotion-20 bb-Spinnervector"
          viewBox="22 22 44 44"
        >
          <circle
            class="emotion-21 bb-SpinnertrackCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
          <circle
            class="emotion-22 bb-SpinnerloaderCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
    <span
      class="emotion-23 emotion-2 emotion-3 bb-Box bb-Text"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`props should render correctly with submitText 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`props should render correctly with type 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Submit
  </button>
</div>
`;

exports[`theming ActionButtons.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-1.emotion-1.emotion-1>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-primary, #000000);
  border-radius: 6px;
  color: var(--bb-palette-primaryInverted, #000000);
  fill: var(--bb-palette-primaryInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-primary, #000000) 0px 0px 0px 1px,var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-7:hover {
  background-color: var(--bb-palette-primary600, #000000);
}

.emotion-7:hover:active {
  background-color: var(--bb-palette-primary700, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Set bb-ActionButtons"
>
  <button
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-Button"
    type="button"
  >
    Cancel
  </button>
  <button
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-Button"
    type="submit"
  >
    Submit
  </button>
</div>
`;
